@@ -1,4 +1,7 @@
 
+2009-04-03 13:37 Ali aliov@xfce.org 
+	 * : Fix issue with battery critical level in the settings dialog
+
 2009-04-02 19:05 Ali aliov@xfce.org 
 	 * : Patch for the man pages by Robby Workman
 
